// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateRustTypes datetime & hashmap used 1`] = `
"use chrono::{DateTime, Utc};
use serde::{Deserialize, Serialize};
use std::collections::HashMap;

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RustType {
    pub date_time: DateTime<Utc>,
    pub hash_boi: HashMap<String, bool>,
}

"
`;

exports[`generateRustTypes datetime used 1`] = `
"use chrono::{DateTime, Utc};
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RustType {
    #[serde(with = \\"chrono::serde::ts_seconds\\")]
    pub unix: DateTime<Utc>,
    pub date: DateTime<Utc>,
    pub date_time: DateTime<Utc>,
}

"
`;

exports[`generateRustTypes hashmap used 1`] = `
"use serde::{Deserialize, Serialize};
use std::collections::HashMap;

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RustType {
    pub hash_boi: HashMap<String, bool>,
}

"
`;

exports[`generateRustTypes optional 1`] = `
"use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RustType {
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub value_a: Option<bool>,
}

"
`;

exports[`generateRustTypes optional, extra decorators 1`] = `
"use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq, Hash, Default)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RustType {
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub value_a: Option<bool>,
}

"
`;

exports[`generateRustTypes write to file 1`] = `
"use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq, Hash)]
#[serde(rename_all = \\"camelCase\\")]
pub struct TabbyData {
    pub weight: f32,
    pub age: u64,
}

#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq, Hash)]
#[serde(rename_all = \\"camelCase\\")]
pub struct TuxedoData {
    pub weight: f32,
    pub age: u64,
}

#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq, Hash)]
#[serde(rename_all = \\"camelCase\\")]
pub struct MaineCoonData {
    pub weight: f32,
    pub age: u64,
    pub fur_variant: String,
}

#[derive(Serialize, Deserialize, Debug, Clone, PartialEq, Eq, Hash)]
#[serde(rename_all = \\"camelCase\\")]
#[serde(tag = \\"type\\")]
pub enum Cat {
    #[serde(rename = \\"tabby\\")]
    Tabby(TabbyData),
    #[serde(rename = \\"tuxedo\\")]
    Tuxedo(TuxedoData),
    #[serde(rename = \\"maineCoon\\")]
    MaineCoon(MaineCoonData),
}

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct ExternalTuple(u8, u8);

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub enum ExternalInterface {
    #[serde(rename = \\"CAN0\\")]
    RENAMETYPENAME,
    #[serde(rename = \\"CAN1\\")]
    CAN1,
    #[serde(rename = \\"CAN2\\")]
    CAN2,
    #[serde(rename = \\"VCAN0\\")]
    VCAN0,
    #[serde(rename = \\"VCAN1\\")]
    VCAN1,
    #[serde(rename = \\"VCAN2\\")]
    VCAN2,
    #[serde(rename = \\"PINS\\")]
    PINS(u8, u8),
    #[serde(rename = \\"FAKEEXTTUPLE\\")]
    FAKEEXTTUPLE(ExternalTuple),
    #[serde(rename = \\"FAKEVALUE\\")]
    FAKEVALUE(u8),
}

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub enum Application {
    #[serde(rename = \\"OBD\\")]
    OBD,
    #[serde(rename = \\"UDS\\")]
    UDS,
    #[serde(rename = \\"KWP2000\\")]
    KWP2000,
}

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub enum Transport {
    #[serde(rename = \\"ISOTP\\")]
    ISOTP,
    #[serde(rename = \\"TP2\\")]
    TP2,
    #[serde(rename = \\"ISOTPNOPAD\\")]
    ISOTPNOPAD,
}

#[derive(Serialize, Deserialize, Debug, Clone)]
#[serde(rename_all = \\"camelCase\\")]
pub struct RequestDID {
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub adaption_setup: Option<Vec<String>>,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub adaption_teardown: Option<Vec<String>>,
    pub service_and_did: String,
    pub interface: ExternalInterface,
    pub application: Application,
    pub transport: Transport,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub session_type: Option<String>,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub use_functional_addressing: Option<bool>,
    pub tx_id: String,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub rx_id: Option<String>,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub tx_local_id: Option<String>,
    #[serde(skip_serializing_if = \\"Option::is_none\\")]
    pub rx_local_id: Option<String>,
    pub raw: bool,
}

"
`;
